--- a/houston-web-design.html
+++ b/houston-web-design.html
@@ -678,6 +678,11 @@
   // ✅ Mobile detection
   const mqMobile = window.matchMedia("(max-width: 980px), (hover: none) and (pointer: coarse)");
   let isMobile = mqMobile.matches;
+  mqMobile.addEventListener?.("change", (e)=>{
+    isMobile = e.matches;
+    if (isMobile) buildPuffTexture();
+    resize();
+  });
 
   const S = {
     w:0, h:0,
@@ -687,7 +692,7 @@
     // slow drift
     speed: 0.0046,
 
-    // Desktop baseline (UNCHANGED)
+    // Desktop baseline (your original values)
     scale: 0.70,
     fade: 0.22,
     glow: 0.25,
@@ -702,22 +707,16 @@
     blurDetail: 4,
     blurGlow: 14,
 
-    // ✅ Mobile sim resolution
+    // ✅ Mobile sim res (a little higher)
     mobileScale: 0.92,
 
-    // ✅ Mobile stamp tuning (THIS is what makes it visible)
-    mobileStampGain: 14.0,     // <— main fix: boost faint alphas
-    mobileStampMaxA: 0.35,     // cap per-stamp alpha so it doesn't blow out
-    mobileStampJitter: 0.18,   // rotation jitter so texture doesn't repeat
+    // ✅ Mobile stamping (IMPORTANT: lower gain + hard cap = no blob)
+    mobileStampGain: 6.0,    // was way too high before
+    mobileStampMaxA: 0.14,   // cap per-stamp alpha
+    mobileStampJitter: 0.14, // small stable rotation
 
     mx:0, my:0, px:0, py:0
   };
-
-  mqMobile.addEventListener?.("change", (e) => {
-    isMobile = e.matches;
-    if (isMobile) buildPuffTexture();
-    resize();
-  });
 
   function resize(){
     S.w = Math.floor(window.innerWidth);
@@ -763,6 +762,13 @@
     return Math.sin(x*1.7 + Math.cos(y*1.3)) * Math.cos(y*1.5 + Math.sin(x*1.1));
   }
 
+  // ✅ deterministic “random” (no flicker)
+  function hash01(a,b,c){
+    // stable [0,1)
+    const s = Math.sin(a*127.1 + b*311.7 + c*74.7) * 43758.5453123;
+    return s - Math.floor(s);
+  }
+
   // ---------------------------
   // ✅ MOBILE-ONLY puff texture
   // ---------------------------
@@ -782,21 +788,16 @@
     const cx = size * 0.5, cy = size * 0.5;
     const R = size * 0.5;
 
-    // Bake a soft noisy alpha blob (no gradients at runtime => no banding rings)
     for (let y=0; y<size; y++){
       for (let x=0; x<size; x++){
         const dx = (x - cx) / R;
         const dy = (y - cy) / R;
         const r = Math.sqrt(dx*dx + dy*dy);
 
-        // base falloff
+        // soft falloff + noise baked into pixels (no runtime gradients => no rings)
         let a = Math.max(0, 1 - Math.pow(r, 1.55));
-
-        // add noise more in mid region (cloudy look)
         const mid = Math.max(0, 1 - Math.abs(r - 0.55) / 0.55);
-        a *= (1 + (Math.random()*2-1) * 0.28 * mid);
-
-        // soften outer edge
+        a *= (1 + (Math.random()*2-1) * 0.22 * mid);
         a *= Math.max(0, 1 - Math.pow(r, 6.0));
 
         const i = (y*size + x) * 4;
@@ -808,8 +809,8 @@
     }
     ptx.putImageData(img, 0, 0);
 
-    // soften by self-stamping (cheap blur)
-    ptx.globalAlpha = 0.20;
+    // soften slightly
+    ptx.globalAlpha = 0.18;
     for(let k=0;k<10;k++){
       const ox = (Math.random()*2-1) * 2.0;
       const oy = (Math.random()*2-1) * 2.0;
@@ -833,42 +834,46 @@
     btx.fill();
   }
 
-  // Mobile: texture stamp puff (visible + no rings)
-  function puffStamp(x,y,r, colA, colB, a){
+  // Mobile: stamp puff (stable, not flickery)
+  function puffStamp(x,y,r, colA, colB, a, seed){
     if (!puffTex) buildPuffTexture();
     if (!puffTex) return;
 
-    // Boost faint alpha to match gradient look
+    // boost faint alpha, but keep it controlled
     let A = a * S.mobileStampGain;
     A = clamp(A, 0, S.mobileStampMaxA);
-    if (A <= 0.0001) return;
+    if (A <= 0.00005) return;
+
+    // stable jitter + stable tint selection (NO Math.random)
+    const h1 = hash01(x, y, seed);
+    const h2 = hash01(x+17.3, y-9.1, seed);
+
+    const rot = (h1*2 - 1) * S.mobileStampJitter;
+    const useA = h2 < 0.55;
+    const tint = (useA ? colA : colB).replace("{a}", "1");
 
     const size = r * 2;
 
     btx.save();
     btx.translate(x, y);
-    btx.rotate((Math.random()*2-1) * S.mobileStampJitter);
+    btx.rotate(rot);
 
-    // 1) stamp alpha (white texture)
+    // 1) stamp alpha
     btx.globalCompositeOperation = "source-over";
     btx.globalAlpha = A;
     btx.drawImage(puffTex, -r, -r, size, size);
 
-    // 2) tint only where alpha exists
-    const useA = Math.random() < 0.55;
-    const tint = (useA ? colA : colB).replace("{a}","1");
-
+    // 2) colorize the alpha
     btx.globalCompositeOperation = "source-in";
     btx.globalAlpha = 1;
     btx.fillStyle = tint;
     btx.fillRect(-r, -r, size, size);
 
-    // restore to caller’s blend mode (caller sets "lighter")
     btx.restore();
   }
 
-  function puff(x,y,r, colA, colB, a){
-    if (isMobile) puffStamp(x,y,r,colA,colB,a);
+  function puff(x,y,r, colA, colB, a, seed){
+    if (isMobile) puffStamp(x,y,r,colA,colB,a,seed);
     else puffGradient(x,y,r,colA,colB,a);
   }
 
@@ -877,13 +882,13 @@
     const f1 = Math.sin(t*0.95 + u*6.2 + phase);
     const f2 = Math.sin(t*0.55 + u*13.0 - phase*0.7);
     const f3 = Math.sin(t*1.35 + u*3.2);
-    const wave = f1*0.55 + f2*0.30 + f3*0.15;
-    return yBase + wave * amp;
+    return yBase + (f1*0.55 + f2*0.30 + f3*0.15) * amp;
   }
 
   function step(){
     S.t += S.speed;
 
+    // mouse drift
     S.px += (S.mx - S.px) * 0.03;
     S.py += (S.my - S.py) * 0.03;
 
@@ -898,9 +903,9 @@
     btx.globalCompositeOperation = "lighter";
 
     const layers = [
-      { y: 0.33, amp: S.amp*0.85, phase: 0.0,  drift:  0.14, tint: 0.0,  strength: 0.92 },
-      { y: 0.56, amp: S.amp*1.05, phase: 1.4,  drift: -0.10, tint: 1.3,  strength: 0.80 },
-      { y: 0.74, amp: S.amp*0.95, phase: 2.25, drift:  0.08, tint: 2.2,  strength: 0.70 }
+      { y: 0.33, amp: S.amp*0.85, phase: 0.0,  drift:  0.14, tint: 0.0,  strength: 0.92, seed: 11.0 },
+      { y: 0.56, amp: S.amp*1.05, phase: 1.4,  drift: -0.10, tint: 1.3,  strength: 0.80, seed: 22.0 },
+      { y: 0.74, amp: S.amp*0.95, phase: 2.25, drift:  0.08, tint: 2.2,  strength: 0.70, seed: 33.0 }
     ];
 
     for(const L of layers){
@@ -935,20 +940,21 @@
 
         const r1 = clamp(band * (1.18 + 0.35*Math.sin(tt)), 52, 220);
         const a1 = (0.010 + 0.010*c1) * S.density * L.strength * (0.40 + 0.60*end);
-        puff(x, yC, r1, A, B, a1);
+        puff(x, yC, r1, A, B, a1, L.seed + i*0.07);
 
         const r2 = clamp(r1*0.40, 20, 88);
         const a2 = a1 * 0.78;
-        puff(x + jx, yC + jy, r2, B, A, a2);
+        puff(x + jx, yC + jy, r2, B, A, a2, L.seed + i*0.11);
 
         const off = (wy * 0.5 + 0.5) * band * 0.90;
-        puff(x - jx*0.55, yC + off*0.32, r2*0.78, A, B, a2*0.50);
-        puff(x + jx*0.45, yC - off*0.30, r2*0.72, B, A, a2*0.46);
+        puff(x - jx*0.55, yC + off*0.32, r2*0.78, A, B, a2*0.50, L.seed + i*0.13);
+        puff(x + jx*0.45, yC - off*0.30, r2*0.72, B, A, a2*0.46, L.seed + i*0.17);
       }
 
+      // background volume (keep, but it's gentle due to alpha cap)
       const hx = W*0.5 + Math.sin(S.t*0.28 + L.phase)*W*0.12 + S.px*10;
       const hy = H*L.y + Math.cos(S.t*0.26 - L.phase)*H*0.10 + S.py*8;
-      puff(hx, hy, Math.hypot(W,H)*0.22, "rgba(84,243,164,{a})", "rgba(170,110,255,{a})", 0.009*S.density);
+      puff(hx, hy, Math.hypot(W,H)*0.22, "rgba(84,243,164,{a})", "rgba(170,110,255,{a})", 0.009*S.density, L.seed + 99.9);
     }
 
     btx.globalCompositeOperation = "source-over";
@@ -957,12 +963,14 @@
     ctx.globalCompositeOperation = "source-over";
     ctx.clearRect(0,0,S.w,S.h);
 
+    // base pass
     ctx.save();
     ctx.filter = `blur(${S.blurBase}px)`;
     ctx.globalAlpha = 1;
     ctx.drawImage(buf, 0,0,W,H, 0,0,S.w,S.h);
     ctx.restore();
 
+    // detail pass
     ctx.save();
     ctx.filter = `blur(${S.blurDetail}px)`;
     ctx.globalCompositeOperation = "lighter";
@@ -970,6 +978,7 @@
     ctx.drawImage(buf, 0,0,W,H, 0,0,S.w,S.h);
     ctx.restore();
 
+    // glow pass
     ctx.save();
     ctx.filter = `blur(${S.blurGlow}px)`;
     ctx.globalCompositeOperation = "lighter";
@@ -982,7 +991,6 @@
     ctx.filter = "none";
   }
 
-  // GSAP ticker
   gsap.ticker.fps(60);
   gsap.ticker.add(step);
 
